# SS-GNN

./: .gitignore  README.md  batch.py  dataloader.py  dataset.py  evaluate.py  make_coreset_graphs.py  make_labels.py  pyproject.toml  train.py  utils.py
